<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item1"
        android:title="@string/opcion1" />
    <item
        android:id="@+id/item2"
        android:title="@string/opcion2" />
    <item
        android:id="@+id/item3"
        android:title="@string/opcion3" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/icon_save"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/restar"
        android:icon="@drawable/icon_fresh"
        android:title="@string/restar"
        app:showAsAction="always" />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/icon_exit"
        android:title="@string/exit"
        app:showAsAction="always" />
</menu>