<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232a36"
    tools:context=".MainActivity" >


    <EditText
        android:id="@+id/txt_player"
        android:layout_width="259dp"
        android:layout_height="78dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:hint="@string/txt_player"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="254dp"
        android:layout_height="77dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:text="@string/btn_play"
        android:textSize="34sp"
        app:icon="@drawable/boton_de_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_player"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/image_sound"
        android:layout_width="97dp"
        android:layout_height="75dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play"
        app:srcCompat="@drawable/icon_volume" />

    <TextView
        android:id="@+id/label_sound"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:text="@string/label_sound"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_sound" />


</androidx.constraintlayout.widget.ConstraintLayout>
